@@ -161,6 +161,8 @@ For the quality of the information committed to the logbook, you need understand
 <li>a nice touch : URLs in attributes (http://..., ftp://..., mailto:...) are automatically converted to links.
 <p>
 <li>in addition to the above URLs, one can enter a tag <b>elog:&lt;id&gt;</b> which references another logbook entry. The tag <b>elog:&lt;logbook&gt;/&lt;id&gt;</b> references a message in another logbook on the same server.
+The tag <b>elog:&lt;id&gt;/&lt;n&gt;</b> references attachment number <b>n</b> in a logbook entry. To reference
+an attachment in the current message, one uses <b>elog:/&lt;n&gt;</b>.
 <p>
 <li>the Text multi-line field, if present, may be pre-filled with a template if entries need to have a common, consistent format across the logbook (especially for HTML). There may also be a comment inserted before it to explain local rules and conventions, upload rules, etc.
 <p>
